kubernetes/apps/external-services/octopi/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: octopi
subsets:
  - addresses:
      - ip: 10.127.0.196
    ports:
      - name: http
        port: 80
