kubernetes/apps/external-services/octopi/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: octopi
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
